test/integration/bad/new/type-size-bad21.stan
data { matrix[T, print(0)] x;}